2003-06-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* lib/Makefile.in :

	  - Added a check for -fpic in case -fPIC fails.

	* lib/kb.cpp :
	* lib/kb.h :
	* main/operation.y :

	  - Separated compute() into compute_generate() and
	    compute_evaluate() also generate_nlp() and evaluate_nlp() to
	    query_generate() and query_evaluate(). This change is made to
	    allow multiple queries of the same transformation sequence to
	    share the same kb state.


2003-06-02  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/vlad.h :

	  - Now generate_nlp() outputs the queries too.

	* docs/bnf_operations.txt :
	* docs/langspecs.txt :
	* main/operation.l :
	* main/operation.y :
	* samples/cwall_operations :

	  - Added a "compute" statement into the operations language to
	    separate computation from query evaluation.

	* lib/kb.cpp :

	  - Changed inheritance rules from :

	      holds(Se, A, O) <- holds(Sg, A, O) AND memb(Se, Sg)
              holds(S, Ae, O) <- holds(S, Ag, O) AND memb(Ae, Ag)
              holds(S, A, Oe) <- holds(S, A, Og) AND memb(Oe, Og)

	    to :

	      holds(Se, A, O) <- holds(Sg, A, O) AND memb(Se, Sg) AND NOT 
	      !holds(Se, A, O)

              holds(S, Ae, O) <- holds(S, Ag, O) AND memb(Ae, Ag) AND NOT
	      !holds(S, Ae, O)

              holds(S, A, Oe) <- holds(S, A, Og) AND memb(Oe, Og) AND NOT
	      !holds(S, A, Oe)

	    This addition allows group members to override group properties.
	    note that the negative properties cannot be overridden.


2003-05-29  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :
	* lib/kb.h :

	  - Changes (including api) to allow apps to trigger computation
	    before queries.

	  - Took out useless condition to close inittab, transtab and
	    consttab. Now a more general close_kb() is used.

	* main/operation.y :
	* main/program.y :

	  - Fixes to reflect above changes. Still computes models on the fly
	    at every query.

	* lib/wrapper.cpp :
