@@ -1,3 +1,12 @@
+2003-06-09  vino Crescini  <jcrescin@cit.uws.edu.au>
+
+	* lib/wrapper.h :
+	* lib/wrapper.cpp :
+	* lib/smwrap.h :
+	* lib/smwrap.cpp :
+
+	  - Renamed wrapper to smwrap.
+
 2003-06-03  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
 	* configure.ac :
